add button to storyboard

--- a/Swift_TableViewAlert/ViewController/Main/Base.lproj/Main.storyboard
+++ b/Swift_TableViewAlert/ViewController/Main/Base.lproj/Main.storyboard
@@ -14,7 +14,32 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="cxw-DB-pHb">
+                                <rect key="frame" x="139" y="414" width="136" height="68"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Upk-9r-OGM">
+                                        <rect key="frame" x="0.0" y="0.0" width="136" height="30"/>
+                                        <state key="normal" title="showAlert"/>
+                                        <connections>
+                                            <action selector="tappedShowAlertButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fb0-lL-aJI"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oDG-ud-Im4">
+                                        <rect key="frame" x="0.0" y="38" width="136" height="30"/>
+                                        <state key="normal" title="showTableViewAlert"/>
+                                        <connections>
+                                            <action selector="tappedShowTableViewAlertButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1FS-ED-NU0"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="cxw-DB-pHb" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Owg-DO-j8a"/>
+                            <constraint firstItem="cxw-DB-pHb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SnF-DR-IDc"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
